--- a/WEB/View/Pages/Login.html
+++ b/WEB/View/Pages/Login.html
@@ -24,14 +24,27 @@
         <div class="content first-content">
 
             <div class="first-column">
-
-                <h2 class="title title-primary"></h2>
-                 <img src="../../Public/Image/logo.ofc-removebg-preview (1).png" class="img" width="40%" style=" display:flexbox;">
-
-                <p class="description description-primary"></p>
-                <p class="description description-primary">por favor faça login com suas informações pessoais</p>
-                <button id="signin" class="btn btn-primary" >Voltar</button>
+                <h2 class="title title-primary">Foto de Perfil</h2>
+                <p class="description description-primary">Escolha uma nova foto para seu perfil:</p>
+            
+                <!-- Imagem do perfil (vai receber a imagem redonda) -->
+                <div class="profile-container">
+                    <img id="profile-image" src="../../Public/Image/user (1).png" class="profile-img">
+                    
+                    <!-- Input de upload invisível -->
+                    <input type="file" id="image-input" accept="image/*">
+                    
+                    <!-- Ícone no canto direito -->
+                    <label for="image-input" class="upload-icon">
+                        <img src="../../Public/Image/simbolo-de-interface-de-camera-fotografica-para-botao.png" alt="Upload" class="icon">
+                    </label>
+                </div>
+            
+                <!-- Botão para voltar -->
+                <button id="signin" class="btn btn-primary">Voltar</button>
             </div>
+            
+            
 
             <div class="second-column">
 
@@ -120,10 +133,9 @@
 
         <div class="content second-content">
             <div class="first-column">
-                <h2 class="title title-primary-1">olá amigo!</h2>
-                <p class="description description-primary">Insira seus dados pessoais</p>
-                <p class="description description-primary">e comece a jornada conosco</p>
-                <button id="signup" class="btn btn-primary">Cadastrar</button>
+        
+                <img src="../../Public/Image/logo.ofc-removebg-preview (1).png" class="img" width="60%" style=" display:flexbox; margin-left: 15%; margin-top: 30%;">
+                <button id="signup" class="btn btn-primary" style="margin-top: 1%;">Cadastrar</button>
             </div>
             <div class="second-column-1">
                 <h2 class="title title-second-1">faça login</h2>
