--- a/WEB/View/Pages/home.html
+++ b/WEB/View/Pages/home.html
@@ -17,12 +17,7 @@
 <body>
     <div class="inicio">
         <header>
-            <ul class="ul">
-                <i class="fa fa-user-circle-o" aria-hidden="true"><a href="">Login</a></i>
-                <!--inserir o link da pagina de login aqui-->
-                <i class="fa fa-plus-circle" aria-hidden="true"><a href="">Cadastrar</a></i>
-                <!--inserir o link da pagina de cadastro aqui-->
-            </ul>
+            
         </header>
         <div class="circulo"></div> <!-- aqui está o circulo ao fundo da imagem -->
         <div class="content">
@@ -30,7 +25,7 @@
                 <h2>Bem vindo ao Patinhas do Bem</h2>
                 <p>O site onde você pode adotar ou doar animais com facilidade.Transforme vidas com um simples gesto!
                 </p>
-                <a href="">Acessar</a> <!--inserir o link da pagina de login aqui-->
+                <a href="/Login">Acessar</a> <!--inserir o link da pagina de login aqui-->
             </div>
             <div class="imgBox"> <!-- imagem pricipal do home -->
                 <img src="../../Public/Image/gatoecachorro.png">
